@@ -7,7 +7,9 @@ import asyncore
 import socket
 import select
 import time
+import gc
 import os
+import errno
 import pprint
 import urllib, urlparse
 import traceback
@@ -164,6 +166,22 @@ class BasicTests(unittest.TestCase):
         wr = weakref.ref(ss)
         del ss
         self.assertEqual(wr(), None)
+
+    def test_makefile_close(self):
+        # Issue #5238: creating a file-like object with makefile() shouldn't
+        # leak the underlying file descriptor.
+        ss = ssl.wrap_socket(socket.socket(socket.AF_INET))
+        fd = ss.fileno()
+        f = ss.makefile()
+        f.close()
+        # The fd is still open
+        os.read(fd, 0)
+        # Closing the SSL socket should close the fd too
+        ss.close()
+        gc.collect()
+        with self.assertRaises(OSError) as e:
+            os.read(fd, 0)
+        self.assertEqual(e.exception.errno, errno.EBADF)
 
 
 class NetworkedTests(unittest.TestCase):
